# social-support-ai

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  api-design.md  docker-compose.yml  folder-structure.md  git-commit-strategy.md  implementation-roadmap.md  langgraph-workflow.md  personal_interview.md  pyproject.toml
backend/: main.py
backend/api/v1/: applications.py  auth.py  decisions.py  schemas.py
backend/core/: config.py  di.py  exceptions.py  logging.py  metrics.py  observability.py
backend/database/mongodb/: __init__.py  document_store.py
backend/database/neo4j/: __init__.py  graph_store.py
backend/database/postgres/: __init__.py  database.py  models.py  repositories.py
backend/database/qdrant/: __init__.py  vector_store.py
backend/domain/: __init__.py
backend/domain/entities/: __init__.py  applicant.py  application.py  assessment.py  document.py
backend/domain/events/: __init__.py  domain_events.py
backend/domain/ports/: __init__.py  application_repo.py  document_store.py  graph_store.py  llm_service.py  ml_service.py  vector_store.py
backend/domain/values/: __init__.py  address.py  document_type.py  eligibility_score.py  income.py
backend/ml/: __init__.py  features.py  model.py  pipeline.py  rules.py
backend/rag/: retriever.py
backend/scripts/: seed_admin.py
backend/seed/: seed_runner.py  synthetic_data.py
backend/services/: audit_service.py  auth_service.py  llm_service.py
backend/workflows/: config.py  edges.py  graph.py  nodes.py  state.py
configs/: features.yaml
docker/: Dockerfile
docs/: architecture-m2.mmd  architecture-m3.mmd  architecture-m4.mmd  architecture-m5.mmd  architecture-m6.mmd  solution-summary.md
docs/decisions/: 001-clean-architecture.md  002-langgraph-over-crewai.md  003-local-llm-strategy.md  004-polyglot-persistence.md  005-ml-llm-boundary.md  006-agent-observability.md
frontend/: api_client.py  streamlit_app.py
frontend/utils/: admin_page.py  applications_page.py  dashboard_page.py  detail_page.py  process_page.py
tests/integration/: conftest.py  test_api.py  test_audit.py  test_metrics.py
tests/unit/: test_auth.py  test_domain.py  test_ml.py
(+1 files in other folders)
