[project]
name = "social-support-ai"
version = "0.1.0"
description = "AI-powered social support application workflow automation for government social security departments"
requires-python = ">=3.11"
authors = [
    { name = "Social Support AI Team" },
]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "motor>=3.6.0",
    "beanie>=1.27.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.24.0",

    # AI / ML
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "shap>=0.46.0",

    # Document processing
    "pypdf>=5.0.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "markdown>=3.6.0",

    # Observability
    "langfuse>=2.50.0",

    # UI
    "streamlit>=1.38.0",

    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "faker>=28.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.2",
    "injector>=0.22.0",

    # Async
    "celery>=5.4.0",
    "redis>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "asgi-lifespan>=2.1.0",
    "ipython>=8.27.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
